[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oaipmharvest"
version = "0.0.5"
description = "Highly configurable oai-harvester based on sickle."
authors = [{name = "UB Frankfurt a. M.", email = "ublabs@ub.uni-frankfurt.de"}]
license = {text = "MPL 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX :: Linux",
]
urls = {Homepage = "https://github.com/ubffm/oaipmharvest"}
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "requests[socks]==2.32.3",
    "Sickle==0.7.0",
    'tomli==2.2.1; python_version<"3.11"',
    "voluptuous==0.15.2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
oaipm_harvest = "oaipmharvest.cli:main"

[tool.setuptools]
platforms = ["linux"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}
