[metadata]
name = oaipmharvest 
version = 0.0.1
description = Highly configurable oai-harvester based on sickle.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ubffm/oaipmharvest
author = UB Frankfurt a. M.
author_email = ublabs@ub.uni-frankfurt.de
license = MPL 2.0
platforms = linux
classifiers =
    Development Status :: 3 - Alpha 
    Environment :: Console
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.7
install_requires=
        arrow==1.2.2
        requests[socks]==2.27.1
        Sickle==0.7.0
        toml==0.10.2
        voluptuous==0.12.2
[options.entry_points]
console_scripts = 
    oaipm_harvest = oaipmharvest.cli:main

