[metadata]
name = oaipmharvest 
version = 0.0.5
description = Highly configurable oai-harvester based on sickle.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ubffm/oaipmharvest
author = UB Frankfurt a. M.
author_email = ublabs@ub.uni-frankfurt.de
license = MPL 2.0
platforms = linux
classifiers =
    Development Status :: 3 - Alpha 
    Environment :: Console
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.9
install_requires=
        arrow==1.3.0
        requests[socks]==2.32.3
        Sickle==0.7.0
        tomli==2.2.1; python_version<"3.11"
        voluptuous==0.15.2
[options.entry_points]
console_scripts = 
    oaipm_harvest = oaipmharvest.cli:main
